ci: fix rbac-regression job to use production-secure cookie settings

--- a/docs/releases/v1.9.23.md
+++ b/docs/releases/v1.9.23.md
@@ -38,7 +38,7 @@ Added an automated RBAC regression gate in CI that validates critical allow/deny
 
 ## Environment/config changes
 - No new environment variables.
-- CI runs RBAC job in `NODE_ENV=development` with `SESSION_COOKIE_SECURE=false` to allow localhost cookie replay for API checks.
+- CI runs RBAC job with production-secure cookie posture (`NODE_ENV=production`, `SESSION_COOKIE_SECURE=true`).
 
 ## Migration and data impact
 - No migrations required.
