--- a/docs/releases/v2.0.0-beta.4.md
+++ b/docs/releases/v2.0.0-beta.4.md
@@ -34,6 +34,11 @@ This milestone closes the beta.4 import quality work and adds UX continuity fixe
 - `media_type='other'` is migrated to `media_type='comic_book'`.
 - Legacy clients posting `other` are normalized to `comic_book` server-side for compatibility.
 
+## Environment/config changes
+- No new required environment variables were introduced in this milestone.
+- Existing deployments can continue using current `.env` values.
+- Legacy links using `library-other` are compatibility-mapped to Comic Books.
+
 ## Migration and data impact
 - New migration applied:
   - `v24` Rename media_type `other` to `comic_book`.
