Fix beta release note triage marker

--- a/docs/releases/v2.0.0-beta.6.md
+++ b/docs/releases/v2.0.0-beta.6.md
@@ -58,6 +58,14 @@ This milestone completes the comic import/enrichment foundation, adds signing-pr
 - Roll back app images to `2.0.0-beta.5r1` if needed.
 - If rollback includes schema rollback policy, `signed_proof_path` is additive and can remain; old versions ignore it.
 
+## Security vulnerability triage
+- CI security gates remain enforced for this release train:
+  - gitleaks (no new secrets),
+  - dependency scan with triage policy checks,
+  - image scan gating.
+- No new vulnerability exceptions were introduced in `2.0.0-beta.6`.
+- Existing dependency advisories are tracked under the dependency-update policy and handled via staged Dependabot PRs with CI verification.
+
 ## Known issues and follow-up
 - Comic provider quality still depends on upstream metadata consistency.
 - Reader implementation remains out of scope for beta.6 and is tracked for RC decisions.
