--- a/docs/releases/v2.0.0-beta.6.md
+++ b/docs/releases/v2.0.0-beta.6.md
@@ -59,6 +59,7 @@ This milestone completes the comic import/enrichment foundation, adds signing-pr
 - If rollback includes schema rollback policy, `signed_proof_path` is additive and can remain; old versions ignore it.
 
 ## Security vulnerability triage
+- High findings: present in dependency scan outputs; triaged per policy and tracked via staged dependency updates.
 - CI security gates remain enforced for this release train:
   - gitleaks (no new secrets),
   - dependency scan with triage policy checks,
