--- a/docs/releases/v2.0.0-beta.6.md
+++ b/docs/releases/v2.0.0-beta.6.md
@@ -60,6 +60,8 @@ This milestone completes the comic import/enrichment foundation, adds signing-pr
 
 ## Security vulnerability triage
 - High findings: present in dependency scan outputs; triaged per policy and tracked via staged dependency updates.
+- Owner: @hkrewson
+- Target remediation milestone: 2.0.0-rc.1
 - CI security gates remain enforced for this release train:
   - gitleaks (no new secrets),
   - dependency scan with triage policy checks,
