--- a/docs/reports/2.0.0-rc.1-go-no-go.md
+++ b/docs/reports/2.0.0-rc.1-go-no-go.md
@@ -1,9 +1,9 @@
 # 2.0.0-rc.1 Go/No-Go Report
 
-Date: 2026-03-01  
+Date: 2026-03-02  
 Owner: collectZ engineering  
-Version under test: `2.0.0-beta.6` (RC.1 validation in progress)  
-Decision: `PENDING`
+Version under test: `2.0.0-rc.1`  
+Decision: `GO`
 
 ## Scope
 
@@ -17,26 +17,26 @@ RC validation for:
 
 ### Required CI Gates
 
-- [ ] Secret scan
-- [ ] Dependency scan
+- [x] Secret scan
+- [x] Dependency scan
 - [x] Migration check (init parity + rehearsal)
-- [ ] Compose smoke
-- [ ] RBAC regression check
-- [ ] Image security scan + SBOM
+- [x] Compose smoke
+- [x] RBAC regression check
+- [x] Image security scan + SBOM
 
 ### Required Test Artifacts
 
-- [ ] `docs/testing/2.0.0-rc.1-test-matrix.md` completed
+- [x] `docs/testing/2.0.0-rc.1-test-matrix.md` completed
 - [x] migration rehearsal evidence attached
 - [x] init parity evidence attached
-- [ ] security scan summaries attached
+- [x] security scan summaries attached
 
 ### Runtime/Manual Validation
 
-- [ ] Public test-server rehearsal complete
-- [ ] Blocker incidents from tester reports resolved
-- [ ] Media-type matrix complete (movie/tv/book/audio/game)
-- [ ] Import quality checks complete (Plex/CSV/Delicious/comics where enabled)
+- [x] Public test-server rehearsal complete
+- [x] Blocker incidents from tester reports resolved
+- [x] Media-type matrix complete (movie/tv/book/audio/game)
+- [x] Import quality checks complete (Plex/CSV/Delicious/comics where enabled)
 
 ## Baseline Automated Results (Current Session)
 
@@ -44,12 +44,12 @@ RC validation for:
 - `test:integration-smoke`: PASS.
 - `test:init-parity`: PASS (executed in one-off mounted container using explicit `INIT_SQL_PATH`).
 - `test:migration-rehearsal`: PASS (evidence written to `backend/artifacts/migration-rehearsal-evidence.json`).
-- `test:rbac-regression`: BLOCKED (default script URL and/or credential context issue; requires explicit RC command profile).
-- `test:cross-type-isolation`: BLOCKED until `RBAC_ADMIN_EMAIL` and `RBAC_ADMIN_PASSWORD` are provided for non-empty DB.
+- `test:rbac-regression`: PASS (with explicit credentialed env profile).
+- `test:cross-type-isolation`: PASS (with explicit `RBAC_ADMIN_EMAIL` + `RBAC_ADMIN_PASSWORD`).
 
 ## Blockers
 
-- RC automation blocker: credentialed RBAC and cross-type checks need standardized runner env for non-empty databases.
+- None open for RC.1 sign-off.
 
 ## Known Non-Blockers / Follow-ups
 
@@ -59,5 +59,5 @@ RC validation for:
 
 ## Final Decision
 
-- `GO` or `NO-GO`: TBD
-- Reason: TBD
+- `GO` or `NO-GO`: GO
+- Reason: RC.1 gates and matrix criteria have been validated for release-candidate deployment.
