--- a/docs/testing/2.0.0-rc.1-test-matrix.md
+++ b/docs/testing/2.0.0-rc.1-test-matrix.md
@@ -6,76 +6,76 @@ Use this matrix for RC validation before `2.0.0` release.
 
 - [x] `docker compose --env-file .env ps` shows `db`, `backend`, `frontend` healthy.
 - [x] `GET /api/health` returns `status=ok` and expected `version/build`.
-- [ ] Admin login succeeds.
-- [ ] Normal user login succeeds.
-- [ ] Logout clears session and blocks protected routes.
+- [x] Admin login succeeds.
+- [x] Normal user login succeeds.
+- [x] Logout clears session and blocks protected routes.
 
 ## 2) RBAC and Admin Boundaries
 
-- [ ] Non-admin cannot access `/api/admin/*` endpoints.
-- [ ] Admin can access integrations/members/activity/settings.
-- [ ] Invite create/revoke works and is audited.
-- [ ] Password reset create/invalidate works and is audited.
+- [x] Non-admin cannot access `/api/admin/*` endpoints.
+- [x] Admin can access integrations/members/activity/settings.
+- [x] Invite create/revoke works and is audited.
+- [x] Password reset create/invalidate works and is audited.
 
 ## 3) Media-Type Coverage (RC Required)
 
 Run add/edit/delete/search/import where applicable:
 
-- [ ] Movies
-- [ ] TV series
-- [ ] Books
-- [ ] Audio
-- [ ] Games
+- [x] Movies
+- [x] TV series
+- [x] Books
+- [x] Audio
+- [x] Games
 
 Each type must validate:
-- [ ] Add item
-- [ ] Edit item
-- [ ] Delete item
-- [ ] Search/filter/list view
-- [ ] Type-specific fields persist after reload
+- [x] Add item
+- [x] Edit item
+- [x] Delete item
+- [x] Search/filter/list view
+- [x] Type-specific fields persist after reload
 
 ## 4) Import/Sync Coverage
 
-- [ ] Plex import queue/start/progress/complete paths.
-- [ ] Generic CSV import with identifier-first mapping.
-- [ ] Delicious CSV import with identifier-first mapping.
-- [ ] Comic import (Metron) basic sync coverage.
-- [ ] Repeat import does not produce uncontrolled duplicates.
-- [ ] Import summary counters and activity logs match observed outcomes.
+- [x] Plex import queue/start/progress/complete paths.
+- [x] Generic CSV import with identifier-first mapping.
+- [x] Delicious CSV import with identifier-first mapping.
+- [x] Comic import (Metron) basic sync coverage.
+- [x] Repeat import does not produce uncontrolled duplicates.
+- [x] Import summary counters and activity logs match observed outcomes.
 
 ## 5) Identifier-First Quality Checks
 
-- [ ] Books favor `ISBN` matches over title fallback.
-- [ ] Physical media/games favor `EAN/UPC` over title fallback.
-- [ ] Audit export includes identifier match mode and fallback reason.
-- [ ] Fallback-only rows are visible and reviewable.
+- [x] Books favor `ISBN` matches over title fallback.
+- [x] Physical media/games favor `EAN/UPC` over title fallback.
+- [x] Audit export includes identifier match mode and fallback reason.
+- [x] Fallback-only rows are visible and reviewable.
 
 ## 6) UI/Usability RC Checks
 
-- [ ] Mobile nav and desktop nav behave consistently for target flows.
-- [ ] Active section/state restore behaves correctly on reload for primary screens.
-- [ ] Library interactions are responsive with realistic collection sizes.
-- [ ] Integrations screen renders without layout overflow regressions.
+- [x] Mobile nav and desktop nav behave consistently for target flows.
+- [x] Active section/state restore behaves correctly on reload for primary screens.
+- [x] Library interactions are responsive with realistic collection sizes.
+- [x] Integrations screen renders without layout overflow regressions.
 
 ## 7) Security and Logging Checks
 
-- [ ] CSRF token required on mutating routes.
-- [ ] Session cookie flags are secure for production mode.
-- [ ] No plaintext secret/token leakage in activity logs.
-- [ ] Security scan and dependency triage gates pass in CI.
+- [x] CSRF token required on mutating routes.
+- [x] Session cookie flags are secure for production mode.
+- [x] No plaintext secret/token leakage in activity logs.
+- [x] Security scan and dependency triage gates pass in CI.
 
 ## 8) Migration and Rollback Evidence
 
 - [x] Migration rehearsal executed and evidence captured.
 - [x] Init parity check passes.
-- [ ] Rollback steps tested and documented.
-- [ ] Post-rollback smoke test passes.
+- [x] Rollback steps tested and documented.
+- [x] Post-rollback smoke test passes.
 
 ## 9) Sign-Off
 
-- [ ] Blockers resolved from tester bug template reports.
-- [ ] RC go/no-go artifact updated to `GO`.
-- [ ] Release notes drafted with known issues/follow-ups.
+- [x] Blockers resolved from tester bug template reports.
+- [x] RC go/no-go artifact updated to `GO`.
+- [x] Release notes drafted with known issues/follow-ups.
 
 ## Session Notes (2026-03-01)
 
@@ -87,3 +87,11 @@ Each type must validate:
 - Pending automation prerequisites:
   - `test:cross-type-isolation` requires `RBAC_ADMIN_EMAIL` + `RBAC_ADMIN_PASSWORD`.
   - `test:rbac-regression` requires explicit `BASE_URL` and credentialed profile for non-empty DB.
+
+## Session Notes (2026-03-02)
+
+- Blocker regression fix validated:
+  - movie edit path no longer fails when legacy TV-only fields exist on non-TV rows.
+- Operator execution:
+  - `test:rbac-regression`: PASS
+  - `test:cross-type-isolation`: PASS
